57
In 2.10.0.r24516-b20110320020044 it has changed to just a type mismatch:
```scala
scala>   buildProd(myFoo)(1)
<console>:12: error: type mismatch;
 found   : Int(1)
 required: _4.foo.Arg where val _4: buildProd
         buildProd(myFoo)(1)
                          ^
```
